[package]
name = "past201912-open"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
past201912-open-a = { alias = "a", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_a" }
past201912-open-b = { alias = "b", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_b" }
past201912-open-c = { alias = "c", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_c" }
past201912-open-d = { alias = "d", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_d" }
past201912-open-e = { alias = "e", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_e" }
past201912-open-f = { alias = "f", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_f" }
past201912-open-g = { alias = "g", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_g" }
past201912-open-h = { alias = "h", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_h" }
past201912-open-i = { alias = "i", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_i" }
past201912-open-j = { alias = "j", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_j" }
past201912-open-k = { alias = "k", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_k" }
past201912-open-l = { alias = "l", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_l" }
past201912-open-m = { alias = "m", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_m" }
past201912-open-n = { alias = "n", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_n" }
past201912-open-o = { alias = "o", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_o" }

[[bin]]
name = "past201912-open-a"
path = "src/bin/a.rs"

[[bin]]
name = "past201912-open-b"
path = "src/bin/b.rs"

[[bin]]
name = "past201912-open-c"
path = "src/bin/c.rs"

[[bin]]
name = "past201912-open-d"
path = "src/bin/d.rs"

[[bin]]
name = "past201912-open-e"
path = "src/bin/e.rs"

[[bin]]
name = "past201912-open-f"
path = "src/bin/f.rs"

[[bin]]
name = "past201912-open-g"
path = "src/bin/g.rs"

[[bin]]
name = "past201912-open-h"
path = "src/bin/h.rs"

[[bin]]
name = "past201912-open-i"
path = "src/bin/i.rs"

[[bin]]
name = "past201912-open-j"
path = "src/bin/j.rs"

[[bin]]
name = "past201912-open-k"
path = "src/bin/k.rs"

[[bin]]
name = "past201912-open-l"
path = "src/bin/l.rs"

[[bin]]
name = "past201912-open-m"
path = "src/bin/m.rs"

[[bin]]
name = "past201912-open-n"
path = "src/bin/n.rs"

[[bin]]
name = "past201912-open-o"
path = "src/bin/o.rs"

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=3.14.2", features = ["c_raw", "stringly_conversions"] }
amplify_derive = "=2.11.3"
amplify_num = { version = "=0.4.1", features = ["std"] }
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.5", features = ["derive"] }
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = { version = "=1.11.0", features = ["const_generics", "const_new", "write", "union", "serde", "arbitrary"] }

[dev-dependencies]
